# AgenticRec

./: .gitignore  LICENSE  README.md  README_EN.md  Tutorial.md  pyproject.toml
agentic_rec/: __init__.py  agents.py  bench.py  bench_public.py  collab.py  core.py  gating.py  llm.py  pipeline.py  service.py  tools.py  vector_backend.py
agentic_rec/datasets/: __init__.py  base.py  movielens.py
examples/: quickstart.py  run_movielens_bench.py  service_demo.py
tests/: test_bench.py  test_collab.py  test_deepseek_api.py  test_gating.py  test_service.py  test_smoke.py  test_vector_backend.py
