[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rec"
version = "0.1.0"
description = "From Pipeline to Council — A lightweight agentic framework for search & recommendation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GuoXun" }]
requires-python = ">=3.10"
keywords = ["agent", "llm", "recommendation", "search", "ranking", "rerank"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
agentic-rec-bench = "agentic_rec.bench:main"
agentic-rec-serve = "agentic_rec.service:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["agentic_rec*"]
